# great.sh

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  install.sh  marketplace.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  test-in-docker.sh  tsconfig.node.json
.claude-plugin/: marketplace.json
.github/workflows/: cdk.yml  ci.yml  deployment.yml  release.yml
.tasks/backlog/: 0001-platform-detection.md  0003-cli-infrastructure.md  0004-status-command.md  0005-doctor-command.md  0006-diff-command.md  0007-package-manager.md  0008-runtime-manager.md  0010-complete-all-stubs.md  0039-docker-on-wsl2-falsely-detected-as-wsl.md  0041-mcp-test-misleading-error-no-mcp-section.md  0042-status-doctor-hint.md  0045-apply-only-skip-flags-not-implemented.md  0046-doctor-exit-code-in-container.md  0047-cargo-fmt-violations.md  0049-mcp-bridge-jsonrpc-test-no-backends.md  0050-statusline-display-width.md  0051-mcp-add-hardcoded-package.md  0052-vault-tristate-get.md  0053-release-checksums.md  0054-oidc-scope-and-cdk-guards.md  (+1 more)
docker/: cross-linux-aarch64.Dockerfile  cross-macos.Dockerfile  cross-test-linux-aarch64.sh  cross-test-macos.sh  cross-test-windows.sh  cross-windows.Dockerfile  fedora.Dockerfile  test.sh  ubuntu.Dockerfile
docs/: mcp-bridge.md
loop/: observer-template.md  teams-config.json
site/: index.html  tsconfig.json
src/: error.rs  main.rs  main.tsx
templates/: ai-fullstack-py.toml  ai-fullstack-ts.toml  ai-minimal.toml  saas-multi-tenant.toml
tests/: cli_smoke.rs  hook_state.rs  mcp_bridge_protocol.sh
(+422 files in other folders)
