[package]
name = "great-sh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "great"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "string"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "6.0"
colored = "3.0"
indicatif = "0.17"
regex = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
