[package]
name = "great-sh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "great"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "string"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
zip = "2"
dirs = "6.0"
colored = "3.0"
indicatif = "0.17"
regex = "1.0"
toml_edit = "0.22"
semver = "1.0"
which = "7"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
